# ArcticTracker-ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  COMMANDS  Makefile  README.md  flash_all.sh  partitions.csv  partitions_example.csv  sdkconfig  sdkconfig.defaults
components/afsk/: CMakeLists.txt  afsk.c  afsk.h  afsk_rx.c  afsk_rxsampler.c  afsk_tx.c  convert.sh  crc16.h  fifo.c  fifo.h  hdlc_decoder.c  hdlc_encoder.c  test.c
components/aprs/: CMakeLists.txt  afsk.c  afsk.h  afsk_rx.c  afsk_rxsampler.c  afsk_tx.c  aprs.h  ax25.c  ax25.h  cmd_aprs.c  component.mk  digipeater.c  digipeater.h  fifo.c  fifo.h  hdlc.h  hdlc_decoder.c  hdlc_encoder.c  heardlist.c  heardlist.h  igate.c  igate.h  lora_aprs.c  monitor.c  tracker.c  tracker.h  tracklogger.c  tracklogger.h  trackstore.c  trackstore.h  xreport.c
components/crypto/: CMakeLists.txt  encryption.c  encryption.h
components/networking/: CMakeLists.txt  api_rest.c  api_test.c  cert.c  cert.h  cmd_networking.c  cuckoo_filter.c  cuckoo_filter.h  fileserver.c  httpd.c  logmon.c  mdns.c  netmon.c  networking.h  restapi.c  restapi.h  security.c  tcpclient.c  tcpserver.c  wifi.c
components/networking/certs/: cert.pem  gencert.sh  privkey.pem
components/pmu/: CMakeLists.txt  pmu.cpp  pmu.h
components/radio/: CMakeLists.txt  adc.c  lora1268.c  lora1268.h  radio.c  radio.h  sa868.c  spi.c  sr_frs.c  tone.c
components/secutils/: CMakeLists.txt  base91.c  base91.h  encryption.c  encryption.h  micro_aes.c  micro_aes.h
components/ui/: CMakeLists.txt  buzzer.c  cmd_register.c  commands.c  commands.h  component.mk  disp_nokia.c  disp_nokia.h  display.c  gui.c  gui.h  gui_menu.c  gui_status.c  lcd.c  led.c  ssd1306.h  ssd1306_i2c.c  ui.c  ui.h
html/: aprs.tpl  config_menu.css  digi.tpl  firmware.tpl  index.html  style.css  sysinfo.tpl  trklog.tpl  wifi.tpl
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  afsk_tx.c  ax25.h  clock.c  cmd_aprs.c  cmd_networking.c  cmd_system.c  commands.c  config.c  config.h  default_param.h  defines.h  fbq.c  fbuf.c  fbuf.h  filesys.c  gps.c  gps.h  gui.c  gui.h  hdlc_encoder.c  httpd.c  lcd.c  lcd.h  main.c  networking.h  radio.c  radio.h  sa868.c  sr_frs.c  system.c  system.h  tcpserver.c  tone.c  tracker.c  tracker.h  tracklogger.c  trackstore.c  (+6 more)
webapp/: application.js  arcticsetup-min.js  index.html
webapp/lib/: mithril-stream.js
webapp/style/: style-min.css
